# aoc2020

./: CMakeLists.txt  README.md  run_all.sh
day1/: CMakeLists.txt  build  build_cmake  main.c  run
day10/: CMakeLists.txt  main.c
day11/: CMakeLists.txt  main.c
day12/: CMakeLists.txt  main.c
day13/: CMakeLists.txt  main.c
day14/: CMakeLists.txt  main.c
day15/: CMakeLists.txt  main.c
day16/: CMakeLists.txt  main.c
day17/: CMakeLists.txt  main.c
day2/: CMakeLists.txt  main.c
day3/: CMakeLists.txt  main.c
day4/: CMakeLists.txt  main.c
day5/: CMakeLists.txt  main.c
day6/: CMakeLists.txt  main.c
day7/: CMakeLists.txt  main.c
day8/: CMakeLists.txt  main.c
day9/: CMakeLists.txt  main.c
shared/: aoc_types.h  file.h
